# hand_gestures_recognition

./: .gitignore  RAPORT.md  README.md  Taskfile.yml  pyproject.toml
hand-gesture-detector/: pyproject.toml
hand-gesture-detector/src/hand_gesture_detector/: __init__.py  config.py  detector.py  gesture_detector.py  main.py  visualizer.py
